# szoveges-ora

./: .gitignore  CMakeLists.txt  activate_TuyaOpenSDK_env.ps1  app_default.config  library.json  partitions_custom.csv  platformio.ini
.agent/: instructions.md
.agent/workflows/: build-arduino.md  clean-arduino.md  monitor-arduino.md  run-desktop-tests.md  sync-core.md  test-arduino.md  upload-arduino.md
docs/: PRD.md  implementation_plan.md  research_tuya.md  word_mapping.md
src/: ClockDrawer.cpp  ClockDrawer.h  DisplayManager.cpp  DisplayManager.h  IDrawer.h  LedDriver.cpp  LedDriver.h  Renderer.cpp  Renderer.h  RingDrawer.cpp  RingDrawer.h  TextClock.cpp  TextClock.h  Types.h  main.cpp  tuya_config.h
src/main/: CMakeLists.txt  LedDriver.cpp  TextClock.cpp  TextClock.h  main.cpp  tuya_config.h
test/arduino/: platformio.ini  sync_core.py
test/arduino/src/: main.cpp
test/desktop/: test_main.cpp
